<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.revolsys.open</groupId>
  <artifactId>revolsys-parent</artifactId>
  <packaging>pom</packaging>
  <name>Revolution Systems Open Library</name>
  <version>MAIN-SNAPSHOT</version>
  <description>The parent module of the Revolution Systems Open Library.</description>
  <url>http://revolsys.github.io/com.revolsys.open/</url>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:git@github.com:revolsys/com.revolsys.open.git</connection>
    <developerConnection>scm:git:git@github.com:revolsys/com.revolsys.open.git</developerConnection>
    <url>https://github.com/revolsys/com.revolsys.open</url>
  </scm>

  <developers>
    <developer>
      <id>paustin</id>
      <name>Paul Austin</name>
      <email>445537+pauldaustin@users.noreply.github.com</email>
    </developer>
  </developers>

  <organization>
    <name>Revolution Systems Inc.</name>
    <url>http://www.revolsys.com/</url>
  </organization>

  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/revolsys/com.revolsys.open/issues</url>
  </issueManagement>

  <modules>
    <module>revolsys-bom</module>
    <module>revolsys-core</module>
    <module>revolsys-testapi</module>
    <module>revolsys-fgdb</module>
    <module>revolsys-gdal</module>
    <module>revolsys-geopackage</module>
    <module>revolsys-oracle</module>
    <module>revolsys-postgresql</module>
    <module>revolsys-maki</module>
    <module>revolsys-swing</module>
    <module>revolsys-web</module>
    <module>revolsys-odata</module>
  </modules>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>3.0.0</version>
        <executions>
          <execution>
            <id>enforce-maven</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>3.8.1</version>
                </requireMavenVersion>
                <requireJavaVersion>
                  <version>17</version>
                </requireJavaVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <release>17</release>
          <debug>true</debug>
          <debuglevel>lines,source,vars</debuglevel>
          <parameters>true</parameters>
          <compilerArgument>-parameters</compilerArgument>
          <testCompilerArgument>-parameters</testCompilerArgument>
        </configuration>
      </plugin>
      <plugin>
        <groupId>io.github.git-commit-id</groupId>
        <artifactId>git-commit-id-maven-plugin</artifactId>
        <version>5.0.0</version>
        <executions>
          <execution>
            <id>get-the-git-infos</id>
            <goals>
              <goal>revision</goal>
            </goals>
            <phase>validate</phase>
          </execution>
        </executions>
        <configuration>
          <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
          <failOnNoGitDirectory>false</failOnNoGitDirectory>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifestEntries>
              <Specification-Title>${project.name}</Specification-Title>
              <Specification-Vendor>${project.organization.name}</Specification-Vendor>
              <Specification-Version>${project.version}</Specification-Version>
              <Implementation-Title>${project.name}</Implementation-Title>
              <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
              <Implementation-Version>${project.version}</Implementation-Version>
              <SCM-Commit>${git.branch}-${git.commit.id}-${git.dirty}</SCM-Commit>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <failOnError>false</failOnError>
          <doclint>none</doclint>
          <quiet>true</quiet>
          <skip>${maven.javadoc.skip}</skip>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <configuration>
              <skip>${maven.javadoc.skip}</skip>
            </configuration>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.3.1</version>
        <configuration>
          <failOnMissingWebXml>false</failOnMissingWebXml>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>3.0.1</version>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.5.3</version>
        <configuration>
          <goals>deploy</goals>
          <autoVersionSubmodules>true</autoVersionSubmodules>
          <developmentVersion>${project.version}</developmentVersion>
          <tagNameFormat>@{project.version}</tagNameFormat>
          <updateDependencies>false</updateDependencies>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-install-plugin</artifactId>
        <configuration>
          <createChecksum>true</createChecksum>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <configuration>
          <deployAtEnd>true</deployAtEnd>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>2.0.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>
						--illegal-access=permit
					</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-descriptor</id>
            <goals>
              <goal>attach-descriptor</goal>
            </goals>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>org.apache.maven.doxia</groupId>
            <artifactId>doxia-module-markdown</artifactId>
            <version>1.11.1</version>
          </dependency>
          <dependency>
            <groupId>io.github.devacfr.maven.skins</groupId>
            <artifactId>reflow-velocity-tools</artifactId>
            <version>2.3.0</version>
          </dependency>
          <dependency>
            <groupId>net.trajano.wagon</groupId>
            <artifactId>wagon-git</artifactId>
            <version>2.0.4</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>2.8.1</version>
        <configuration>
          <generateBackupPoms>false</generateBackupPoms>
          <rulesUri>file:${session.executionRootDirectory}/version-rules.xml</rulesUri>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.2.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.2.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.12.1</version>
          <configuration>
            <port>7483</port> <!-- SITE=7483 -->
            <tempWebappDirectory>${basedir}/target/site/tempdir</tempWebappDirectory>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.2</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>3.1.2</version>
        <configuration>
          <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
          <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <failOnError>false</failOnError>
          <doclint>none</doclint>
          <quiet>true</quiet>
          <detectLinks>true</detectLinks>
          <detectJavaApiLink>true</detectJavaApiLink>
        </configuration>
        <reportSets>
          <reportSet>
            <reports>
              <report>javadoc</report>
              <report>test-javadoc</report>
            </reports>
          </reportSet>
          <reportSet>
            <id>aggregate</id>
            <inherited>false</inherited>
            <reports>
              <report>aggregate</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      
      <plugin>
        <groupId>org.owasp</groupId>
        <artifactId>dependency-check-maven</artifactId>
        <version>7.4.0</version>
        <reportSets>
          <reportSet>
            <inherited>false</inherited>
            <reports>
              <report>aggregate</report>
            </reports>
            <configuration>
              <suppressionFiles>
                <suppressionFile>${project.basedir}/suppressions.xml</suppressionFile>
              </suppressionFiles>
            </configuration>
          </reportSet>
        </reportSets>
      </plugin>
    </plugins>
  </reporting>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>Github Packages</name>
      <url>https://maven.pkg.github.com/revolsys/com.revolsys.open</url>
    </repository>
    <site>
      <id>gh-pages</id>
      <name>Deployment through GitHub's site deployment plugin</name>
      <url>github:https://revolsys.github.io/com.revolsys.open</url>
    </site>
  </distributionManagement>

  <repositories>
    <repository>
      <id>central</id>
      <name>Maven Central</name>
      <layout>default</layout>
      <url>https://repo1.maven.org/maven2</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    
    <repository>
      <id>revolsys-libs</id>
      <name>Revolsys Libs</name>
      <url>https://raw.githubusercontent.com/revolsys/mvnrepository/main/</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
<!--
    <repository>
      <id>github-jeometry</id>
      <name>Github Jeometry</name>
      <url>https://maven.pkg.github.com/jeometry-org/jeometry</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>github-revolsys</id>
      <name>Github Revolsys</name>
      <url>https://maven.pkg.github.com/${gitHubRepo}</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
-->
   </repositories>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <org.jeometry.version>MAIN-SNAPSHOT</org.jeometry.version>
    <gpg.skip>true</gpg.skip>
    <github.global.server>github</github.global.server>
    <skipTests>true</skipTests>
    <gitHubRepo>revolsys/com.revolsys.open</gitHubRepo>
    <siteUrl>${project.url}</siteUrl>
  </properties>
</project>
